@@ -56,7 +56,7 @@
    "provides" : {
       "Future::Mojo" : {
          "file" : "lib/Future/Mojo.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -71,7 +71,7 @@
          "web" : "https://github.com/Grinnz/Future-Mojo"
       }
    },
-   "version" : "0.001",
+   "version" : "0.002",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>"
    ]
