@@ -53,7 +53,8 @@ Returns the underlying L<Mojo::IOLoop> object.
 
  $future->await;
 
-Runs the underlying L<Mojo::IOLoop> until the future is ready.
+Runs the underlying L<Mojo::IOLoop> until the future is ready. If the future is
+not ready and the event loop is already running, an exception is thrown.
 
 =head2 done_next_tick
 
