@@ -34,7 +34,12 @@ sub new_timer {
 
 sub loop { shift->{loop} }
 
-sub await { $_[0]->{loop}->one_tick until $_[0]->is_ready }
+sub await {
+	my $self = shift;
+	croak 'Awaiting a future while the event loop is running would recurse'
+		if !$self->is_ready and $self->{loop}->is_running;
+	$self->{loop}->one_tick until $self->is_ready;
+}
 
 sub done_next_tick {
 	my $self = shift;
@@ -113,7 +118,8 @@ Returns the underlying L<Mojo::IOLoop> object.
 
  $future->await;
 
-Runs the underlying L<Mojo::IOLoop> until the future is ready.
+Runs the underlying L<Mojo::IOLoop> until the future is ready. If the future is
+not ready and the event loop is already running, an exception is thrown.
 
 =head2 done_next_tick
 
